# auction-map

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent-notes/: fix-pr-45.md  issue-51-todo-review.md
backend/: .env.example  Dockerfile  db.py  docker-compose.yml  main.py  models.py  openapi.yaml
backend/.github/workflows/: ci.yml  deploy.yml
backend/api/: nav_auction.py
docs/data_dictionary/: nav_auctions_fields.csv
docs/wiki/: SPIKE-9-nav-auctions-analysis.md
spikes/: SPIKE-4-spike-frontend-technical-stack-selection.md  SPIKE-5-spike-backend-technical-stack-selection.md  SPIKE-6-spike-qa-technical-stack--testing-strategy.md  SPIKE-7-be-cicd-pipeline--docker-compose-setup.md
src/components/: AuctionFilterBar.tsx  AuctionMarker.css  AuctionMarker.tsx  FilterSidebar.css  FilterSidebar.tsx  NAVAuctionMap.tsx
src/components/__tests__/: AuctionFilterBar.test.tsx  AuctionMarker.test.tsx  FilterSidebar.test.tsx  NAVAuctionMap.test.tsx
src/scraper/nav_auctions/: __init__.py  config.py  extractor.py  pagination.py  parser.py
src/services/: nav-auction-api.ts
src/types/: nav-auction.ts
tests/: test_nav_auctions_extractor.py  test_nav_auctions_parser.py
